2007-02-04  Jim Evins  <evins@snaught.com>

	* src/wdgt-mini-preview.c:
	* src/wdgt-mini-preview.h:
		Ported widget from GnomeCanvas to Cairo.

2007-02-03  Jim Evins  <evins@snaught.com>

	* data/glade/template-designer.glade:
	* src/template-designer.c:
	* src/template-designer.h:
		Ported GnomeDruid to GtkAssistant.  Since libglade does not
		yet support the GtkAssistant and we derive directly from
		the Assistant, the pages are layed out in a GtkNotebook in
		the glade description -- we then append each page to the
		assistant.

2007-01-25  Jim Evins  <evins@snaught.com>

	* data/glade/object-editor.glade:
		Added dummy page to notebook, to prevent shadow page from
		becoming the default current page at creation.
	* src/view-box.c: (construct_properties_editor):
	* src/view-ellipse.c: (construct_properties_editor):
	* src/view-line.c: (construct_properties_editor):
	* src/view-text.c: (construct_properties_editor):
		Reconciled order of params.

2007-01-19  Jim Evins  <evins@snaught.com>

	* src/label-barcode.h:
	* src/label-object.c: (gl_label_object_set_font_weight),
	(gl_label_object_set_text_alignment),
	(gl_label_object_get_font_weight),
	(gl_label_object_get_text_alignment):
	* src/label-object.h:
	* src/label-text.c: (gl_label_text_instance_init), (copy),
	(get_size), (set_font_family), (set_font_weight),
	(set_text_alignment), (get_font_weight), (get_text_alignment):
	* src/label-text.h:
	* src/object-editor-text-page.c:
	(gl_object_editor_prepare_text_page),
	(gl_object_editor_set_font_family),
	(gl_object_editor_set_font_weight),
	(gl_object_editor_get_font_weight),
	(gl_object_editor_set_text_alignment),
	(gl_object_editor_get_text_alignment),
	(gl_object_editor_set_text_color):
	* src/object-editor.h:
	* src/prefs-dialog.c: (construct_object_page),
	(update_object_page_from_prefs), (update_prefs_from_object_page):
	* src/prefs-model.c: (gl_prefs_model_save_settings),
	(gl_prefs_model_load_settings):
	* src/prefs-model.h: